# DOLSharp

./: .gitignore  Dawn of Light.sln  Program.cs  appveyor.yml
DOLBase/: Constants.cs  DOLBase.csproj  Statistics.cs
DOLBase/Config/: XMLConfigFile.cs
DOLBase/MPK/: MPK.cs  MPKFile.cs  MPKFileHeader.cs
DOLBase/Network/: PacketOut.cs
DOLConfig/: DOLConfig.csproj
DOLDatabase/: DOLDatabase.csproj  IObjectDatabase.cs  ObjectDatabase.cs  WhereLinqExpression.cs
DOLDatabase/Connection/: TableRowBindind.cs
DOLDatabase/Handlers/: MySQLObjectDatabase.cs  SQLiteObjectDatabase.cs
DOLDatabase/Tables/: Inventory.cs  NpcTemplate.cs
DOLServer/: ConsolePacketLib.cs  DOLServer.csproj  GameServerService.cs  GameServerServiceInstaller.cs  MainClass.cs
DOLServer/actions/: ConsoleStart.cs  ServiceInstall.cs  ServiceRun.cs  ServiceStart.cs  ServiceStop.cs  ServiceUninstall.cs
GameServer/: GameClient.cs  GameServer.cs  GameServer.csproj  GameServerConfiguration.cs  GlobalConstants.cs
GameServer/behaviour/: AbstractRequirement.cs  BehaviourUtils.cs
GameServer/core/: Vector3Exts.cs
GameServerScripts/: GameServerScripts.csproj
IntegrationTests/: IntegrationTests.csproj  SchedulerTest.cs  SetUpTests.cs
IntegrationTests_Database/: DatabaseSetUp.cs  DatabaseTests.cs  IntegrationTests_Database.csproj  MySQLDBSetUp.cs
Pathing_native/: CMakeLists.txt
Pathing_native/Detour/: CMakeLists.txt
Pathing_native/Detour/Include/: DOLInterface.h  DetourNavMesh.h
Pathing_native/Detour/Source/: DOLInterface.cpp
Pathing_native/Viewer/: CMakeLists.txt
Pathing_native/Viewer/Include/: gles2.h
Pathing_native/Viewer/Source/: gles2.cpp  main.cpp
Tests/: Tests.csproj
UnitTests/: UT_GameNPC.cs  UT_GamePlayer.cs  UnitTests.csproj
(+1034 files in other folders)
